implemented: topThreeCarsByMaxVelocity, carsWithPowerMoreThan, meanOwnersAgeOfCarBrand, meanCarNumberForEachOwner. All is tested